--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
+    "@nuxtjs/strapi": "^0.3.0",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12"
   },
